k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-resume-app
  namespace: live-resume
spec:
  replicas: 2
  selector:
    matchLabels:
      app: live-resume-app
  template:
    metadata:
      labels:
        app: live-resume-app
    spec:
      containers:
        - name: live-resume-app
          image: saeedha/live-resume-devops:1.0
          ports:
            - containerPort: 3000
